--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.dainian.codedemo">
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -17,6 +19,17 @@
             </intent-filter>
         </activity>
         <activity android:name=".activitys.TabLayoutActivity"></activity>
+
+
+
+        <receiver
+            android:name=".demoBroadcast.BootCompleteReceiver"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="000000"/>
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
