--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':rxjava2demolibrary', ':viewdemolibrary'
+include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary'
