加入Provider 联系人示例

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary'
+include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary', ':providercontactslibrary', ':notificationlibrary'
