加入 Handler 更新 UI 相关示例

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     implementation project(':rxjava2demolibrary')
     implementation project(path: ':viewdemolibrary')
     implementation project(path: ':photolibrary')
-    compile project(path: ':providercontactslibrary')
-    compile project(path: ':notificationlibrary')
+    implementation project(path: ':providercontactslibrary')
+    implementation project(path: ':notificationlibrary')
+    compile project(path: ':threaddemo')
 }
