加入 HttpURLConnection 、OkHttp、WebView的简单使用

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary', ':providercontactslibrary', ':notificationlibrary', ':mediademolibrary', ':threaddemo'
+include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary', ':providercontactslibrary', ':notificationlibrary', ':mediademolibrary', ':threaddemo', ':httpsimplelibrary'
