加入 简单播放本地音视频 相关代码

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation project(path: ':notificationlibrary')
     implementation project(path: ':threaddemo')
     implementation project(path: ':httpsimplelibrary')
+    implementation project(path: ':mediademolibrary')
 }
