--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary', ':providercontactslibrary', ':notificationlibrary', ':mediademolibrary', ':threaddemo', ':httpsimplelibrary'
+include ':app', ':rxjava2demolibrary', ':viewdemolibrary', ':photolibrary', ':providercontactslibrary', ':notificationlibrary', ':mediademolibrary', ':threaddemo', ':servicedemolibrary' ,':httpsimplelibrary'
